# pydantic-ai-demos

./: CLAUDE.md  README.md  main.py  pyproject.toml
demos/basics/: agent_interface.py  hello.py
demos/capabilities/: custom_capability.py  hooks.py  thinking.py
demos/dependencies/: dependency_injection.py  override_deps.py
demos/evals/: basic_eval.py
demos/graphs/: basic_graph.py
demos/harness/: code_mode.py
demos/multi_agent/: deterministic_routing.py  graph_orchestration.py
demos/streaming/: graph_streaming.py
demos/testing/: function_model.py  test_model.py
demos/tools/: function_tools.py  human_in_the_loop.py  toolsets.py
docs/: pydantic-ai-modernization.md
src/core/: __init__.py  models.py
