[project]
name = "pyd-ai"
version = "0.1.0"
description = "Pydantic AI POCs and demos"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.128.0",
    "pydantic-ai>=1.72.0",
    "rich>=14.2.0",
    "uvicorn>=0.40.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
